# toy_lib

./: CMakeLists.txt  readme.md
applications/: CMakeLists.txt  main.cpp
grid/: CMakeLists.txt  hyper_cube.cpp
lac/: CMakeLists.txt  matrix.cpp  matrix.h
tests/: CMakeLists.txt
tests/grid/: hyper_ball_00.cpp  hyper_cube_00.cpp
tests/grid/hyper_cube_00/: expected.txt
tests/lac/: matrix_00.cpp
